<?xml version="1.0"?>
<package>
  <name>ros_gazebo_step_and_stop</name>
  <version>0.0.0</version>
  <description>The ros_gazebo_step_and_stop package</description>

  <maintainer email="swiftfoottim@gmail.com">Jared Moore</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/ros_gazebo_step_and_stop</url> -->

  <author email="swiftfoottim@gmail.com">Jared Moore</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
